--- a/src/main/webapp/css/viewDetail.css
+++ b/src/main/webapp/css/viewDetail.css
@@ -3812,6 +3812,7 @@
     font-weight: 700;
     color: rgb(48, 48, 51);
     text-decoration: underline;
+    display:none;
     }
     .reviewBox {
     position: relative;
@@ -3820,7 +3821,32 @@
     background: rgb(244, 244, 244);
     display: none;
     }
+    .modalBox {
+    display: none; /* 기본적으로 숨김 */
+    position: fixed; /* 화면 기준으로 고정 */
+    z-index: 1000; /* 다른 요소 위에 표시 */
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    text-align: left;
+    padding: 24px 30px 30px;
+    background-color: rgba(244, 244, 244, 0.5); /* 배경 투명도 조절 */
+    }
+    
+    .modalContent{
+     background-color: rgba(244, 244, 244);
+     margin: 10% auto; /* 모달이 화면 중앙에 위치하도록 조정 */
+     padding: 20px;
+     width: 80%; /* 모달 너비 설정 */
+     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    }
     .reviewMbox {
+    display: flex;
+    margin-bottom: 10px;
+    }
+    .modalMbox {
     display: flex;
     margin-bottom: 10px;
     }
@@ -3832,12 +3858,36 @@
     line-height: 42px;
     color: rgb(48, 48, 51);
     }
+    .modalSbox{
+    flex-shrink: 0;
+    width: 80px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 42px;
+    text-align:center;
+    color: rgb(48, 48, 51);
+    margin-top: 10px;
+    }
     .reviewSquare {
     display: flex;
     flex: 1 1 0%;
     flex-direction: column;
     -webkit-box-pack: center;
     justify-content: center;
+    }
+    .modalSquare {
+    flex: 1 1 0%;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    justify-content: center;
+    padding: 10px;
+    }
+    .modalSquare2 {
+    flex: 1 1 0%;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    justify-content: center;
+    margin-top: 20px;
     }
     .reviewID {
     padding: 0px 14px;
@@ -3909,6 +3959,10 @@
     -webkit-box-align: center;
     align-items: center;
     }
+     .modalButtons {
+    text-align: right;
+    margin-top: 20px;
+    }
     .reviewClose {
     display: flex;
     -webkit-box-align: center;
@@ -3919,7 +3973,7 @@
     min-height: 25px;
     width: 82px;
     height: 40px;
-    font-size: 13px;
+    font-size: 13px !important;
     margin-right: 5px;
     font-weight: 700;
     color: rgb(0, 0, 0);
@@ -3940,6 +3994,41 @@
     color: rgb(255, 255, 255);
     background: rgb(48, 48, 51);
     border: 1px solid rgb(48, 48, 51);
+   }
+   .reviewUp {
+    padding: 10px 20px;
+    margin: 0 10px;
+    cursor: pointer;
+    font-size: 13px;
+    margin-right: 5px;
+    font-weight: 700;
+    color: rgb(255, 255, 255);
+    background: rgb(48, 48, 51);
+    border: 1px solid rgb(48, 48, 51);
+   }
+   .modalClose {
+     padding: 10px 20px;
+    margin: 0 10px;
+    cursor: pointer;
+    font-size: 13px;
+    margin-right: 5px;
+    font-weight: 700;
+    color: rgb(0, 0, 0);
+    background: rgb(255, 255, 255);
+    border: 1px solid rgb(212, 212, 212);
+    }
+    .modalText {
+    resize: none;
+    height: 160px;
+    margin-top: 10px;
+    width:100%;
+    padding: 10px 14px;
+    font-size: 13px;
+    line-height: 24px;
+    background: rgb(255, 255, 255);
+    border: 1px solid rgb(212, 212, 212);
+    outline: none;
+    box-shadow: none;
    }
    .imageInput {
     display: none;
@@ -3995,4 +4084,54 @@
     height: 140px;
     border-bottom: 1px solid rgb(212, 212, 212);
   }
+  .css-6jrdpz {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.css-269leu {
+    width: 400px;
+    height: 400px;
+}
+.css-79elbk {
+    position: relative;
+}
+.css-16892w0 {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 10px 0px;
+}
+.css-1fw48x4 {
+    position: relative;
+    padding: 15px 10px 10px;
+    background-color: rgb(244, 244, 244);
+}
+ .reviewUpdate {
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    min-width: 40px;
+    min-height: 25px;
+    margin-left: 10px;
+    font-size: 9px;
+    color: rgb(48, 48, 51);
+    text-decoration: underline;
+    display: block;
+    }
+     .reviewDelete {
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    min-width: 40px;
+    min-height: 25px;
+    margin-left: 0px;
+    font-size: 9px;
+    color: rgb(48, 48, 51);
+    text-decoration: underline;
+    display: block;
+    }
   
